--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
 -->
 <resources>
     <string name="near_the">Near the</string>
-    <string name="app_name" />
+    <string name="app_name">EarthQuake</string>
 </resources>
